--- a/Practica 1/index.html
+++ b/Practica 1/index.html
@@ -57,15 +57,26 @@
     <table class="tabla-body">
       <tbody>
         <td>
-          <figure>
-            <img src="foto2.jpeg" width="550" height="600"/>
-          </figure>
+          <section id="foto1">
+            <figure>
+              <img src="foto2.jpeg" width="550" height="500"/>
+            </figure>
+            <section class="texto1">
+              <h2> No pain, no gain </h2>
+            </section>
+          </section>
+
         </td>
 
         <td>
-          <figure>
-            <img src="foto1.jpeg" width="500" height="500"/>
-          </figure>
+          <section id="foto2">
+            <figure>
+              <img src="foto3.jpg" width="550" height="500"/>
+            </figure>
+            <section class="texto2">
+              <h2><p>El dolor es temporal,</p>
+                  <p>el orgullo es para siempre</p></h2>
+            </section>
         </td>
       </tbody>
     </table>
@@ -81,6 +92,7 @@
     <section>
       <footer>
         <a href="../como_se_hizo.pdf">Cómo se hizo</a>
+        <p>Posted by: Luis Balderas Ruiz</p>
       </footer>
     </section>
   </body>
