Modificaciones. CSS para slide

--- a/Practica 1/index.html
+++ b/Practica 1/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="index.css"/>
     <!-- Load font awesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="slider-def.css">
   </head>
 
   <body>
@@ -54,7 +55,85 @@
         </nav>
     </section>
 
-    <table class="tabla-body">
+    <section id="slider">
+      <section class="slides">
+
+        <!-- Primera -->
+        <section class="slider">
+          <section class="legend"></section>
+          <section class="content">
+            <section class="content-txt">
+              <h1>No pain, no gain</h1>
+                <h2>Únete a nosotros y supera todos tus barreras</h2>
+            </section>
+          </section>
+          <section class="images">
+            <img src="foto2.jpeg" width="1400" height="900"/>
+          </section>
+        </section>
+
+        <!-- Segunda -->
+        <section class="slider">
+          <section class="legend"></section>
+          <section class="content">
+            <section class="content-txt">
+              <h1>Just do it</h1>
+                <h2>
+                  El dolor es temporal,
+                  el orgullo es para siempre
+                </h2>
+            </section>
+          </section>
+          <section class="images">
+            <img src="foto6.jpg" width="1400" height="500"/>
+          </section>
+        </section>
+
+      <!-- Tercera -->
+      <section class="slider">
+        <section class="legend"></section>
+        <section class="content">
+          <section class="content-txt">
+            <h1>Yes, you can!</h1>
+              <h2>
+                The only limit is the one you set yourself
+              </h2>
+          </section>
+        </section>
+        <section class="images">
+          <img src="foto4.jpeg" width="1400" height="500"/>
+        </section>
+      </section>
+
+      <!-- Cuarta -->
+      <section class="slider">
+        <section class="legend"></section>
+        <section class="content">
+          <section class="content-txt">
+            <h1>You'll never walk alone</h1>
+              <h2>Trabaja a nuestro lado para conseguirlo todo</h2>
+          </section>
+        </section>
+        <section class="images">
+          <img src="foto5.jpg" width="1400" height="790"/>
+        </section>
+      </section>
+    </section>
+  </section>
+
+    <section class="switch">
+      <ul>
+          <li>
+            <section class="on"></section>
+          </li>
+          <li></li>
+          <li></li>
+          <li></li>
+      </ul>
+    </section>
+
+
+    <!--<table class="tabla-body">
       <tbody>
         <td>
           <section id="foto1">
@@ -79,7 +158,7 @@
             </section>
         </td>
       </tbody>
-    </table>
+    </table>-->
 
     <!-- The social media icon bar -->
     <section class="icon-bar">
