Cambio en la frase

--- a/Practica 1/index.html
+++ b/Practica 1/index.html
@@ -111,7 +111,7 @@
         <section class="content">
           <section class="content-txt">
             <h1>You'll never walk alone</h1>
-              <h2>Trabaja a nuestro lado para conseguirlo todo</h2>
+              <h2>Lo que hacemos en la vida tiene su eco en la eternidad</h2>
           </section>
         </section>
         <section class="images">
