Avances en la práctica

--- a/Practica 1/index.html
+++ b/Practica 1/index.html
@@ -15,7 +15,7 @@
         <section class="logo">
           <a href="index.html" class="logo">
             <figure>
-              <img src="logo-web.png" alt="logo" width="300" height="100"/>
+              <img src="logo-web.png" alt="logo"/ width="300" height="100">
             </figure>
           </a>
         </section>
@@ -39,21 +39,25 @@
               <input type="reset" id="limpiar" value="Reset"/>
             </form>
         </section>
+
+        <section class="icon">
+            <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+            <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+            <a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
+        </section>
     </header>
 
-    <section>
-        <nav class="topnav">
-              <a class="active" href="#home">Inicio</a>
-              <a href="#activities">Actividades</a>
-              <a href="#timetable">Horario</a>
-              <a href="#technics">Técnicos</a>
-              <a href="#places">Instalaciones y servicios</a>
-              <a href="#location">Localización</a>
-              <a href="#fees">Precios y promociones</a>
-              <a href="#signup">Alta de usuario</a>
-              <a href="#forum">Foro</a>
-        </nav>
-    </section>
+    <nav class="topnav">
+          <a class="active" href="index.html">Inicio</a>
+          <a href="actividades.html">Actividades</a>
+          <a href="#timetable">Horario</a>
+          <a href="#technics">Técnicos</a>
+          <a href="#places">Instalaciones y servicios</a>
+          <a href="localizacion.html">Localización</a>
+          <a href="#fees">Precios y promociones</a>
+          <a href="#signup">Alta de usuario</a>
+          <a href="#forum">Foro</a>
+    </nav>
 
     <section id="slider">
       <section class="slides">
@@ -131,49 +135,10 @@
           <li></li>
       </ul>
     </section>
-
-
-    <!--<table class="tabla-body">
-      <tbody>
-        <td>
-          <section id="foto1">
-            <figure>
-              <img src="foto2.jpeg" width="550" height="500"/>
-            </figure>
-            <section class="texto1">
-              <h2> No pain, no gain </h2>
-            </section>
-          </section>
-
-        </td>
-
-        <td>
-          <section id="foto2">
-            <figure>
-              <img src="foto3.jpg" width="550" height="500"/>
-            </figure>
-            <section class="texto2">
-              <h2><p>El dolor es temporal,</p>
-                  <p>el orgullo es para siempre</p></h2>
-            </section>
-        </td>
-      </tbody>
-    </table>-->
-
-    <!-- The social media icon bar -->
-    <section class="icon-bar">
-     <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-     <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-     <a href="#" class="google"><i class="fa fa-google"></i></a>
-     <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-     <a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
-   </section>
-    <section>
-      <footer>
+   <footer>
         <a href="../como_se_hizo.pdf">Cómo se hizo</a>
         <p>Posted by: Luis Balderas Ruiz</p>
-      </footer>
-    </section>
-  </body>
+   </footer>
+</body>
 
 </html>
