Página de actividades

--- a/Practica 1/actividades.html
+++ b/Practica 1/actividades.html
@@ -48,18 +48,60 @@
         </nav>
     </section>
 
-    <section class="flex">
-      <header>
-        <h1>ACTIVIDADES</h1>
-      </header>
+    <section class="cuerpo">
+            <section class="split-left">
+              <h2><span>ACTIVIDADES</span></h2>
+              <article class="centered">
+                <img src="zumba.jpg" width="100" height="50">
+                <a href="actividad1.html"><h2>Zumba</h2></a>
+                <p>Pásalo de puta madre!</p>
+              </article>
 
-      <section class="activities">
-        <article class="zumba">
-          <img src="zumba.jpg" width="100" height="50">
-          <h2>Zumba</h2>
-          <p>Pásalo de puta madre!</p>
-        </article>
-      </section>
+              <article class="centered">
+                <img src="cycling.jpg" width="100" height="50">
+                <a href="actividad2.html"><h2>Spinning</h2></a>
+                <p>Entrena duro</p>
+              </article>
+
+              <article class="centered">
+                <img src="core.jpg" width="100" height="50">
+                <a href="actividad1.html"><h2>Core</h2></a>
+                <p>Entrena ese abdomen</p>
+              </article>
+
+              <article class="centered">
+                <img src="pool.jpg" width="100" height="50">
+                <a href="actividad1.html"><h2>AquaGym</h2></a>
+                <p>Sumérgete</p>
+              </article>
+
+              <article class="centered">
+                <img src="cycling.jpg" width="100" height="50">
+                <a href="actividad2.html"><h2>Spinning</h2></a>
+                <p>Entrena duro</p>
+              </article>
+              <article class="centered">
+                <img src="cycling.jpg" width="100" height="50">
+                <a href="actividad2.html"><h2>Spinning</h2></a>
+                <p>Entrena duro</p>
+              </article>
+              <article class="centered">
+                <img src="cycling.jpg" width="100" height="50">
+                <a href="actividad2.html"><h2>Spinning</h2></a>
+                <p>Entrena duro</p>
+              </article>
+              <article class="centered">
+                <img src="cycling.jpg" width="100" height="50">
+                <a href="actividad2.html"><h2>Spinning</h2></a>
+                <p>Entrena duro</p>
+              </article>
+            </section>
+
+            <aside class="split-right">
+              <h2>NOTICIAS</h2>
+              <p>Nuevas noticias</p>
+            </aside>
+
     </section>
 
 
