Modificaciones en noticias

--- a/Practica 1/actividades.html
+++ b/Practica 1/actividades.html
@@ -54,7 +54,7 @@
               <article class="centered">
                 <img src="zumba.jpg" width="100" height="50">
                 <a href="actividad1.html"><h2>Zumba</h2></a>
-                <p>Pásalo de puta madre!</p>
+                <p>¡Pásalo en grande mientras bailas!</p>
               </article>
 
               <article class="centered">
@@ -99,7 +99,11 @@
 
             <aside class="split-right">
               <h2>NOTICIAS</h2>
-              <p>Nuevas noticias</p>
+              <ul>
+                <li>Nueva zona de aguas abierta</li>
+                <li>Promoción de precios nuevo curso</li>
+                <li>Conoce a nuestros nuevos directivos</li>
+              </ul>
             </aside>
 
     </section>
