--- a/Practica 1/index.html
+++ b/Practica 1/index.html
@@ -3,6 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WFC Wellness Fitness Center</title>
     <link rel="stylesheet" type="text/css" href="index.css"/>
     <!-- Load font awesome icons -->
@@ -14,9 +15,7 @@
     <header>
         <section class="logo">
           <a href="index.html" class="logo">
-            <figure>
               <img src="logo-web.png" alt="logo"/ width="300" height="100">
-            </figure>
           </a>
         </section>
         <section class="title">
