--- a/Practica 1/actividades.html
+++ b/Practica 1/actividades.html
@@ -3,6 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WFC Wellness Fitness Center</title>
     <link rel="stylesheet" type="text/css" href="index.css"/>
     <!-- Load font awesome icons -->
