--- a/Practica 1/index.html
+++ b/Practica 1/index.html
@@ -49,7 +49,7 @@
     <nav class="topnav">
           <a class="active" href="index.html">Inicio</a>
           <a href="actividades.html">Actividades</a>
-          <a href="#timetable">Horario</a>
+          <a href="horario.html">Horario</a>
           <a href="#technics">Técnicos</a>
           <a href="#places">Instalaciones y servicios</a>
           <a href="localizacion.html">Localización</a>
