--- a/Practica 1/index2.html
+++ b/Practica 1/index2.html
@@ -36,7 +36,7 @@
     <nav class="topnav">
         <a class="active" href="index2.html">Inicio</a>
         <a href="actividades.html">Actividades</a>
-        <a href="#timetable">Horario</a>
+        <a href="horario.html">Horario</a>
         <a href="#technics">Técnicos</a>
         <a href="#places">Instalaciones y servicios</a>
         <a href="localizacion.html">Localización</a>
@@ -44,7 +44,7 @@
         <a href="#signup">Alta de usuario</a>
         <a href="#forum">Foro</a>
     </nav>
-    
+
     <section id="slider">
       <section class="slides">
 
