--- a/Practica 1/actividades.html
+++ b/Practica 1/actividades.html
@@ -39,7 +39,7 @@
         <nav class="topnav">
               <a class="active" href="index2.html">Inicio</a>
               <a href="actividades.html">Actividades</a>
-              <a href="#timetable">Horario</a>
+              <a href="horario.html">Horario</a>
               <a href="#technics">Técnicos</a>
               <a href="#places">Instalaciones y servicios</a>
               <a href="#location">Localización</a>
