Formulario de alta

--- a/Practica 1/actividades.html
+++ b/Practica 1/actividades.html
@@ -44,7 +44,7 @@
               <a href="#places">Instalaciones y servicios</a>
               <a href="#location">Localización</a>
               <a href="#fees">Precios y promociones</a>
-              <a href="#signup">Alta de usuario</a>
+              <a href="formularioalta.html">Alta de usuario</a>
               <a href="#forum">Foro</a>
         </nav>
     </section>
