--- a/Practica 1/actividades.html
+++ b/Practica 1/actividades.html
@@ -40,9 +40,9 @@
               <a class="active" href="index2.html">Inicio</a>
               <a href="actividades.html">Actividades</a>
               <a href="horario.html">Horario</a>
-              <a href="#technics">Técnicos</a>
+              <a href="tecnicos.html">Técnicos</a>
               <a href="#places">Instalaciones y servicios</a>
-              <a href="#location">Localización</a>
+              <a href="localizacion.html">Localización</a>
               <a href="#fees">Precios y promociones</a>
               <a href="formularioalta.html">Alta de usuario</a>
               <a href="#forum">Foro</a>
