--- a/Practica 1/formularioalta.html
+++ b/Practica 1/formularioalta.html
@@ -106,7 +106,7 @@
       </fieldset>
 
       <br> <br>
-        <input type="submit" id="enviar" value="Enviar"  onclick="alert('Hello World!')"/>
+        <input type="submit" id="enviar" value="Enviar"  onclick="alert('La información se registró correctamente')"/>
         <input type="reset" id="limpiar" value="Reset"/>
 
         <br>
