--- a/Practica 1/horario.html
+++ b/Practica 1/horario.html
@@ -37,7 +37,7 @@
         <a class="active" href="index2.html">Inicio</a>
         <a href="actividades.html">Actividades</a>
         <a href="horario.html">Horario</a>
-        <a href="#technics">Técnicos</a>
+        <a href="tecnicos.html">Técnicos</a>
         <a href="#places">Instalaciones y servicios</a>
         <a href="localizacion.html">Localización</a>
         <a href="#fees">Precios y promociones</a>
