Adaptando colores y añadiendo actividades

--- a/Practica 1/tecnicos.html
+++ b/Practica 1/tecnicos.html
@@ -82,67 +82,31 @@
 
       <li class="columna3 fila">
         <section class="columna9 desp1">
-          <img src="t4.jpeg" alt="Tecnico1">
+          <img src="t5.jpeg" alt="Tecnico1">
         </section>
-        <h3 class="columna11">Ana Estrada</h3>
-        <h4 class="columna8 desp2">AquaGym</h4>
+        <h3 class="columna11">Marcos Sanz</h3>
+        <h4 class="columna8 desp2">Core</h4>
       </li>
 
       <li class="columna3 fila">
         <section class="columna9 desp1">
-          <img src="t4.jpeg" alt="Tecnico1">
+          <img src="t6.jpeg" alt="Tecnico1">
         </section>
-        <h3 class="columna11">Ana Estrada</h3>
-        <h4 class="columna8 desp2">AquaGym</h4>
+        <h3 class="columna11">Carla Suarez</h3>
+        <h4 class="columna8 desp2">Body Balance</h4>
       </li>
 
       <li class="columna3 fila">
         <section class="columna9 desp1">
-          <img src="t4.jpeg" alt="Tecnico1">
+          <img src="t7.jpeg" alt="Tecnico1">
         </section>
-        <h3 class="columna11">Ana Estrada</h3>
-        <h4 class="columna8 desp2">AquaGym</h4>
+        <h3 class="columna11">Juana Sanz</h3>
+        <h4 class="columna8 desp2">Pilates/Yoga</h4>
       </li>
 
-      <li class="columna3 fila">
-        <section class="columna9 desp1">
-          <img src="t4.jpeg" alt="Tecnico1">
-        </section>
-        <h3 class="columna11">Ana Estrada</h3>
-        <h4 class="columna8 desp2">AquaGym</h4>
-      </li>
 
-      <li class="columna3 fila">
-        <section class="columna9 desp1">
-          <img src="t4.jpeg" alt="Tecnico1">
-        </section>
-        <h3 class="columna11">Ana Estrada</h3>
-        <h4 class="columna8 desp2">AquaGym</h4>
-      </li>
-      
-      <li class="columna3 fila">
-        <section class="columna9 desp1">
-          <img src="t4.jpeg" alt="Tecnico1">
-        </section>
-        <h3 class="columna11">Ana Estrada</h3>
-        <h4 class="columna8 desp2">AquaGym</h4>
-      </li>
     </ul>
-	</section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+	 </section>
 
     <footer>
         <a href="../como_se_hizo.pdf">Cómo se hizo</a>
