--- a/Practica 1/actividades.html
+++ b/Practica 1/actividades.html
@@ -77,24 +77,24 @@
               </article>
 
               <article class="centered">
-                <img src="cycling.jpg" width="100" height="50">
-                <a href="actividad2.html"><h2>Spinning</h2></a>
+                <img src="pilates.jpeg" width="100" height="50">
+                <a href="actividad2.html"><h2>Pilates</h2></a>
                 <p>Entrena duro</p>
               </article>
               <article class="centered">
-                <img src="cycling.jpg" width="100" height="50">
-                <a href="actividad2.html"><h2>Spinning</h2></a>
-                <p>Entrena duro</p>
+                <img src="yoga.jpeg" width="100" height="50">
+                <a href="actividad2.html"><h2>Yoga</h2></a>
+                <p>Encuentra tu mundo interior</p>
               </article>
               <article class="centered">
                 <img src="cycling.jpg" width="100" height="50">
-                <a href="actividad2.html"><h2>Spinning</h2></a>
-                <p>Entrena duro</p>
+                <a href="actividad2.html"><h2>Body Balance</h2></a>
+                <p>Go!</p>
               </article>
               <article class="centered">
-                <img src="cycling.jpg" width="100" height="50">
-                <a href="actividad2.html"><h2>Spinning</h2></a>
-                <p>Entrena duro</p>
+                <img src="combat.jpeg" width="100" height="50">
+                <a href="actividad2.html"><h2>Body Combat</h2></a>
+                <p>Come on, let's go!</p>
               </article>
             </section>
 
