--- a/Practica 1/localizacion.html
+++ b/Practica 1/localizacion.html
@@ -39,8 +39,7 @@
               <a class="active" href="index2.html">Inicio</a>
               <a href="actividades.html">Actividades</a>
               <a href="actividades.html">Horario</a>
-              <a href="#technics">Técnicos</a>
-              <a href="#places">Instalaciones y servicios</a>
+              <a href="tecnicos.html">Técnicos</a>
               <a href="localizacion.html">Localización</a>
               <a href="#fees">Precios y promociones</a>
               <a href="formularioalta.html">Alta de usuario</a>
