Últimos retoques y foro

--- a/Practica 1/index.html
+++ b/Practica 1/index.html
@@ -54,7 +54,7 @@
           <a href="localizacion.html">Localización</a>
           <a href="#fees">Precios y promociones</a>
           <a href="formularioalta.html">Alta de usuario</a>
-          <a href="#forum">Foro</a>
+          <a href="foro.html">Foro</a>
     </nav>
 
     <section id="slider">
