Imágenes a su carpeta y adaptación

--- a/Practica 1/foro.html
+++ b/Practica 1/foro.html
@@ -17,7 +17,7 @@
         <section class="logo">
           <a href="index2.html" class="logo">
             <figure>
-              <img src="logo-web.png" alt="logo" width="300" height="100"/>
+              <img src="imagenes/logo-web.png" alt="logo" width="300" height="100"/>
             </figure>
           </a>
         </section>
@@ -41,7 +41,7 @@
         <a href="horario.html">Horario</a>
         <a href="tecnicos.html">Técnicos</a>
         <a href="localizacion.html">Localización</a>
-        <a href="#fees">Precios y promociones</a>
+        <a href="precios.html">Precios y promociones</a>
         <a href="formularioalta.html">Alta de usuario</a>
         <a href="foro.html">Foro</a>
     </nav>
@@ -88,8 +88,8 @@
     </section>
 
     <footer>
-        <a href="../como_se_hizo.pdf">Cómo se hizo</a>
-        <p>Posted by: Luis Balderas Ruiz</p>
+         <a href="../como_se_hizo.pdf">Cómo se hizo</a>
+         <p>Posted by:</p> <a href="mailto:wfc@correo.com">Luis Balderas Ruiz</a>
     </footer>
 
   </body>
