--- a/Practica 1/index.html
+++ b/Practica 1/index.html
@@ -15,11 +15,11 @@
     <header>
         <section class="logo">
           <a href="index.html" class="logo">
-              <img src="logo-web.png" alt="logo"/ width="300" height="100">
+              <img src="imagenes/logo-web.png" alt="logo"/ width="300" height="100">
           </a>
         </section>
         <section class="title">
-          <a class="titulo" href="#home"><h1>WFC Wellness Fitness Center</h1></a>
+          <a class="titulo" href="index.html"><h1>WFC Wellness Fitness Center</h1></a>
         </section>
         <section class="log-in">
             <form action="procesar.php" method="post">
@@ -52,7 +52,7 @@
           <a href="horario.html">Horario</a>
           <a href="#technics">Técnicos</a>
           <a href="localizacion.html">Localización</a>
-          <a href="#fees">Precios y promociones</a>
+          <a href="precios.html">Precios y promociones</a>
           <a href="formularioalta.html">Alta de usuario</a>
           <a href="foro.html">Foro</a>
     </nav>
@@ -70,7 +70,7 @@
             </section>
           </section>
           <section class="images">
-            <img src="foto2.jpeg" width="1400" height="900"/>
+            <img src="imagenes/foto2.jpeg" width="1400" height="900"/>
           </section>
         </section>
 
@@ -87,7 +87,7 @@
             </section>
           </section>
           <section class="images">
-            <img src="foto6.jpg" width="1400" height="500"/>
+            <img src="imagenes/foto6.jpg" width="1400" height="500"/>
           </section>
         </section>
 
@@ -103,7 +103,7 @@
           </section>
         </section>
         <section class="images">
-          <img src="foto4.jpeg" width="1400" height="500"/>
+          <img src="imagenes/foto4.jpeg" width="1400" height="500"/>
         </section>
       </section>
 
@@ -117,7 +117,7 @@
           </section>
         </section>
         <section class="images">
-          <img src="foto5.jpg" width="1400" height="790"/>
+          <img src="imagenes/foto5.jpg" width="1400" height="790"/>
         </section>
       </section>
     </section>
@@ -135,7 +135,7 @@
     </section>
    <footer>
         <a href="../como_se_hizo.pdf">Cómo se hizo</a>
-        <p>Posted by: Luis Balderas Ruiz</p>
+        <p>Posted by:</p>  <a href="mailto:wfc@correo.com">Luis Balderas Ruiz</a>
    </footer>
 </body>
 
