--- a/Practica 1/actividades.html
+++ b/Practica 1/actividades.html
@@ -17,7 +17,7 @@
         <section class="logo">
           <a href="index2.html" class="logo">
             <figure>
-              <img src="logo-web.png" alt="logo" width="300" height="100"/>
+              <img src="imagenes/logo-web.png" alt="logo" width="300" height="100"/>
             </figure>
           </a>
         </section>
@@ -42,7 +42,7 @@
               <a href="horario.html">Horario</a>
               <a href="tecnicos.html">Técnicos</a>
               <a href="localizacion.html">Localización</a>
-              <a href="#fees">Precios y promociones</a>
+              <a href="precios.html">Precios y promociones</a>
               <a href="formularioalta.html">Alta de usuario</a>
               <a href="foro.html">Foro</a>
         </nav>
@@ -52,46 +52,46 @@
             <section class="split-left">
               <h2><span>ACTIVIDADES</span></h2>
               <article class="centered">
-                <img src="zumba.jpg" width="100" height="50">
+                <img src="imagenes/zumba.jpg" width="100" height="50">
                 <a href="actividad1.html"><h2>Zumba</h2></a>
                 <p>¡Pásalo en grande mientras bailas!</p>
               </article>
 
               <article class="centered">
-                <img src="cycling.jpg" width="100" height="50">
+                <img src="imagenes/cycling.jpg" width="100" height="50">
                 <a href="actividad2.html"><h2>Spinning</h2></a>
                 <p>Entrena duro</p>
               </article>
 
               <article class="centered">
-                <img src="core.jpg" width="100" height="50">
+                <img src="imagenes/core.jpg" width="100" height="50">
                 <a href="actividad1.html"><h2>Core</h2></a>
                 <p>Entrena ese abdomen</p>
               </article>
 
               <article class="centered">
-                <img src="pool.jpg" width="100" height="50">
+                <img src="imagenes/pool.jpg" width="100" height="50">
                 <a href="actividad1.html"><h2>AquaGym</h2></a>
                 <p>Sumérgete</p>
               </article>
 
               <article class="centered">
-                <img src="pilates.jpeg" width="100" height="50">
+                <img src="imagenes/pilates.jpeg" width="100" height="50">
                 <a href="actividad2.html"><h2>Pilates</h2></a>
                 <p>Entrena duro</p>
               </article>
               <article class="centered">
-                <img src="yoga.jpeg" width="100" height="50">
+                <img src="imagenes/yoga.jpeg" width="100" height="50">
                 <a href="actividad2.html"><h2>Yoga</h2></a>
                 <p>Encuentra tu mundo interior</p>
               </article>
               <article class="centered">
-                <img src="cycling.jpg" width="100" height="50">
+                <img src="imagenes/cycling.jpg" width="100" height="50">
                 <a href="actividad2.html"><h2>Body Balance</h2></a>
                 <p>Go!</p>
               </article>
               <article class="centered">
-                <img src="combat.jpeg" width="100" height="50">
+                <img src="imagenes/combat.jpeg" width="100" height="50">
                 <a href="actividad2.html"><h2>Body Combat</h2></a>
                 <p>Come on, let's go!</p>
               </article>
@@ -108,21 +108,11 @@
 
     </section>
 
-
-
-
-
-
-
-
-
-
-
-
     <footer>
          <a href="../como_se_hizo.pdf">Cómo se hizo</a>
-         <p>Posted by: Luis Balderas Ruiz</p>
+         <p>Posted by:</p> <a href="mailto:wfc@correo.com">Luis Balderas Ruiz</a>
     </footer>
+
   </body>
 
 </html>
