--- a/Practica 1/index2.html
+++ b/Practica 1/index2.html
@@ -15,7 +15,7 @@
         <section class="logo">
           <a href="index2.html" class="logo">
             <figure>
-              <img src="logo-web.png" alt="logo" width="300" height="100"/>
+              <img src="imagenes/logo-web.png" alt="logo" width="300" height="100"/>
             </figure>
           </a>
         </section>
@@ -39,7 +39,7 @@
         <a href="horario.html">Horario</a>
         <a href="tecnicos.html">Técnicos</a>
         <a href="localizacion.html">Localización</a>
-        <a href="#fees">Precios y promociones</a>
+        <a href="precios.html">Precios y promociones</a>
         <a href="formularioalta.html">Alta de usuario</a>
         <a href="foro.html">Foro</a>
     </nav>
@@ -57,7 +57,7 @@
             </section>
           </section>
           <section class="images">
-            <img src="foto2.jpeg" width="1400" height="900"/>
+            <img src="imagenes/foto2.jpeg" width="1400" height="900"/>
           </section>
         </section>
 
@@ -74,7 +74,7 @@
             </section>
           </section>
           <section class="images">
-            <img src="foto6.jpg" width="1400" height="500"/>
+            <img src="imagenes/foto6.jpg" width="1400" height="500"/>
           </section>
         </section>
 
@@ -90,7 +90,7 @@
           </section>
         </section>
         <section class="images">
-          <img src="foto4.jpeg" width="1400" height="500"/>
+          <img src="imagenes/foto4.jpeg" width="1400" height="500"/>
         </section>
       </section>
 
@@ -104,7 +104,7 @@
           </section>
         </section>
         <section class="images">
-          <img src="foto5.jpg" width="1400" height="790"/>
+          <img src="imagenes/foto5.jpg" width="1400" height="790"/>
         </section>
       </section>
     </section>
@@ -122,8 +122,8 @@
     </section>
 
     <footer>
-        <a href="../como_se_hizo.pdf">Cómo se hizo</a>
-        <p>Posted by: Luis Balderas Ruiz</p>
+         <a href="../como_se_hizo.pdf">Cómo se hizo</a>
+         <p>Posted by:</p> <a href="mailto:wfc@correo.com">Luis Balderas Ruiz</a>
     </footer>
 
   </body>
