--- a/Practica 1/localizacion.html
+++ b/Practica 1/localizacion.html
@@ -16,7 +16,7 @@
         <section class="logo">
           <a href="index2.html" class="logo">
             <figure>
-              <img src="logo-web.png" alt="logo" width="300" height="100"/>
+              <img src="imagenes/logo-web.png" alt="logo" width="300" height="100"/>
             </figure>
           </a>
         </section>
@@ -41,7 +41,7 @@
               <a href="actividades.html">Horario</a>
               <a href="tecnicos.html">Técnicos</a>
               <a href="localizacion.html">Localización</a>
-              <a href="#fees">Precios y promociones</a>
+              <a href="precios.html">Precios y promociones</a>
               <a href="formularioalta.html">Alta de usuario</a>
               <a href="foro.html">Foro</a>
         </nav>
@@ -56,8 +56,8 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3178.123776265281!2d-3.6272722468852976!3d37.19728940594712!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd71fc549ee4e0a1%3A0xe8af2a08b3693f26!2sPeriodista+Eduardo+Molina+Fajardo+1!5e0!3m2!1ses!2ses!4v1523386812388" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
     <footer>
-        <a href="../como_se_hizo.pdf">Cómo se hizo</a>
-        <p>Posted by: Luis Balderas Ruiz</p>
+         <a href="../como_se_hizo.pdf">Cómo se hizo</a>
+         <p>Posted by:</p> <a href="mailto:wfc@correo.com">Luis Balderas Ruiz</a>
     </footer>
 
   </body>
