--- a/Practica 1/tecnicos.html
+++ b/Practica 1/tecnicos.html
@@ -15,7 +15,7 @@
         <section class="logo">
           <a href="index2.html" class="logo">
             <figure>
-              <img src="logo-web.png" alt="logo" width="300" height="100"/>
+              <img src="imagenes/logo-web.png" alt="logo" width="300" height="100"/>
             </figure>
           </a>
         </section>
@@ -39,7 +39,7 @@
         <a href="horario.html">Horario</a>
         <a href="tecnicos.html">Técnicos</a>
         <a href="localizacion.html">Localización</a>
-        <a href="#fees">Precios y promociones</a>
+        <a href="precios.html">Precios y promociones</a>
         <a href="formularioalta.html">Alta de usuario</a>
         <a href="foro.html">Foro</a>
     </nav>
@@ -49,7 +49,7 @@
     <ul class="tecnicos">
       <li class="columna3 fila">
         <section class="columna9 desp1">
-          <img src="t1.jpg" alt="Tecnico1">
+          <img src="imagenes/t1.jpg" alt="Tecnico1">
         </section>
         <h3 class="columna11">Manolo Pérez</h3>
         <h4 class="columna8 desp2">Cycling/Spinning</h4>
@@ -57,7 +57,7 @@
 
       <li class="columna3 fila">
         <section class="columna9 desp1">
-          <img src="t2.jpg" alt="Tecnico1">
+          <img src="imagenes/t2.jpg" alt="Tecnico1">
         </section>
         <h3 class="columna11">Celia Pérez</h3>
         <h4 class="columna8 desp2">Zumba</h4>
@@ -65,7 +65,7 @@
 
       <li class="columna3 fila">
         <section class="columna9 desp1">
-          <img src="t3.jpeg" width="200px" alt="Tecnico1">
+          <img src="imagenes/t3.jpeg" width="200px" alt="Tecnico1">
         </section>
         <h3 class="columna11">Juan Sánchez</h3>
         <h4 class="columna8 desp2">Body Combat</h4>
@@ -73,7 +73,7 @@
 
       <li class="columna3 fila">
         <section class="columna9 desp1">
-          <img src="t4.jpeg" alt="Tecnico1">
+          <img src="imagenes/t4.jpeg" alt="Tecnico1">
         </section>
         <h3 class="columna11">Ana Estrada</h3>
         <h4 class="columna8 desp2">AquaGym</h4>
@@ -81,7 +81,7 @@
 
       <li class="columna3 fila">
         <section class="columna9 desp1">
-          <img src="t5.jpeg" alt="Tecnico1">
+          <img src="imagenes/t5.jpeg" alt="Tecnico1">
         </section>
         <h3 class="columna11">Marcos Sanz</h3>
         <h4 class="columna8 desp2">Core</h4>
@@ -89,7 +89,7 @@
 
       <li class="columna3 fila">
         <section class="columna9 desp1">
-          <img src="t6.jpeg" alt="Tecnico1">
+          <img src="imagenes/t6.jpeg" alt="Tecnico1">
         </section>
         <h3 class="columna11">Carla Suarez</h3>
         <h4 class="columna8 desp2">Body Balance</h4>
@@ -97,7 +97,7 @@
 
       <li class="columna3 fila">
         <section class="columna9 desp1">
-          <img src="t7.jpeg" alt="Tecnico1">
+          <img src="imagenes/t7.jpeg" alt="Tecnico1">
         </section>
         <h3 class="columna11">Juana Sanz</h3>
         <h4 class="columna8 desp2">Pilates/Yoga</h4>
@@ -107,10 +107,10 @@
     </ul>
 	 </section>
 
-    <footer>
+   <footer>
         <a href="../como_se_hizo.pdf">Cómo se hizo</a>
-        <p>Posted by: Luis Balderas Ruiz</p>
-    </footer>
+        <p>Posted by:</p> <a href="mailto:wfc@correo.com">Luis Balderas Ruiz</a>
+   </footer>
 
   </body>
 
