Cambios finales. Adaptación al servidor

--- a/Practica 1/index.html
+++ b/Practica 1/index.html
@@ -15,7 +15,7 @@
     <header>
         <section class="logo">
           <a href="index.html" class="logo">
-              <img src="imagenes/logo-web.png" alt="logo"/ width="300" height="100">
+              <img src="./imagenes/logo-web.png" alt="logo"/ width="300" height="100">
           </a>
         </section>
         <section class="title">
@@ -50,7 +50,7 @@
           <a class="active" href="index.html">Inicio</a>
           <a href="actividades.html">Actividades</a>
           <a href="horario.html">Horario</a>
-          <a href="#technics">Técnicos</a>
+          <a href="tecnicos.html">Técnicos</a>
           <a href="localizacion.html">Localización</a>
           <a href="precios.html">Precios y promociones</a>
           <a href="formularioalta.html">Alta de usuario</a>
@@ -70,7 +70,7 @@
             </section>
           </section>
           <section class="images">
-            <img src="imagenes/foto2.jpeg" width="1400" height="900"/>
+            <img src="./imagenes/foto2.jpeg" width="1400" height="900">
           </section>
         </section>
 
@@ -87,7 +87,7 @@
             </section>
           </section>
           <section class="images">
-            <img src="imagenes/foto6.jpg" width="1400" height="500"/>
+            <img src="./imagenes/foto6.jpg" width="1400" height="500">
           </section>
         </section>
 
@@ -103,7 +103,7 @@
           </section>
         </section>
         <section class="images">
-          <img src="imagenes/foto4.jpeg" width="1400" height="500"/>
+          <img src="./imagenes/foto4.jpeg" width="1400" height="500">
         </section>
       </section>
 
@@ -117,7 +117,7 @@
           </section>
         </section>
         <section class="images">
-          <img src="imagenes/foto5.jpg" width="1400" height="790"/>
+          <img src="./imagenes/foto5.jpg" width="1400" height="790">
         </section>
       </section>
     </section>
@@ -134,7 +134,7 @@
       </ul>
     </section>
    <footer>
-        <a href="../como_se_hizo.pdf">Cómo se hizo</a>
+        <a href="como_se_hizo.pdf">Cómo se hizo</a>
         <p>Posted by:</p>  <a href="mailto:wfc@correo.com">Luis Balderas Ruiz</a>
    </footer>
 </body>
