--- a/Practica 1/pregunta1.html
+++ b/Practica 1/pregunta1.html
@@ -16,7 +16,7 @@
         <section class="logo">
           <a href="index2.html" class="logo">
             <figure>
-              <img src="imagenes/logo-web.png" alt="logo" width="300" height="100"/>
+              <img src="./imagenes/logo-web.png" alt="logo" width="300" height="100">
             </figure>
           </a>
         </section>
@@ -80,7 +80,7 @@
       </form>
 
       <footer>
-           <a href="../como_se_hizo.pdf">Cómo se hizo</a>
+           <a href="como_se_hizo.pdf">Cómo se hizo</a>
            <p>Posted by:</p> <a href="mailto:wfc@correo.com">Luis Balderas Ruiz</a>
       </footer>
 
