--- a/Practica 1/tecnicos.html
+++ b/Practica 1/tecnicos.html
@@ -15,7 +15,7 @@
         <section class="logo">
           <a href="index2.html" class="logo">
             <figure>
-              <img src="imagenes/logo-web.png" alt="logo" width="300" height="100"/>
+              <img src="././imagenes/logo-web.png" alt="logo" width="300" height="100">
             </figure>
           </a>
         </section>
@@ -49,7 +49,7 @@
     <ul class="tecnicos">
       <li class="columna3 fila">
         <section class="columna9 desp1">
-          <img src="imagenes/t1.jpg" alt="Tecnico1">
+          <img src="./imagenes/t1.jpg" alt="Tecnico1">
         </section>
         <h3 class="columna11">Manolo Pérez</h3>
         <h4 class="columna8 desp2">Cycling/Spinning</h4>
@@ -57,7 +57,7 @@
 
       <li class="columna3 fila">
         <section class="columna9 desp1">
-          <img src="imagenes/t2.jpg" alt="Tecnico1">
+          <img src="./imagenes/t2.jpg" alt="Tecnico1">
         </section>
         <h3 class="columna11">Celia Pérez</h3>
         <h4 class="columna8 desp2">Zumba</h4>
@@ -65,7 +65,7 @@
 
       <li class="columna3 fila">
         <section class="columna9 desp1">
-          <img src="imagenes/t3.jpeg" width="200px" alt="Tecnico1">
+          <img src="./imagenes/t3.jpeg" width="200px" alt="Tecnico1">
         </section>
         <h3 class="columna11">Juan Sánchez</h3>
         <h4 class="columna8 desp2">Body Combat</h4>
@@ -73,7 +73,7 @@
 
       <li class="columna3 fila">
         <section class="columna9 desp1">
-          <img src="imagenes/t4.jpeg" alt="Tecnico1">
+          <img src="./imagenes/t4.jpeg" alt="Tecnico1">
         </section>
         <h3 class="columna11">Ana Estrada</h3>
         <h4 class="columna8 desp2">AquaGym</h4>
@@ -81,7 +81,7 @@
 
       <li class="columna3 fila">
         <section class="columna9 desp1">
-          <img src="imagenes/t5.jpeg" alt="Tecnico1">
+          <img src="./imagenes/t5.jpeg" alt="Tecnico1">
         </section>
         <h3 class="columna11">Marcos Sanz</h3>
         <h4 class="columna8 desp2">Core</h4>
@@ -89,7 +89,7 @@
 
       <li class="columna3 fila">
         <section class="columna9 desp1">
-          <img src="imagenes/t6.jpeg" alt="Tecnico1">
+          <img src="./imagenes/t6.jpeg" alt="Tecnico1">
         </section>
         <h3 class="columna11">Carla Suarez</h3>
         <h4 class="columna8 desp2">Body Balance</h4>
@@ -97,7 +97,7 @@
 
       <li class="columna3 fila">
         <section class="columna9 desp1">
-          <img src="imagenes/t7.jpeg" alt="Tecnico1">
+          <img src="./imagenes/t7.jpeg" alt="Tecnico1">
         </section>
         <h3 class="columna11">Juana Sanz</h3>
         <h4 class="columna8 desp2">Pilates/Yoga</h4>
@@ -108,7 +108,7 @@
 	 </section>
 
    <footer>
-        <a href="../como_se_hizo.pdf">Cómo se hizo</a>
+        <a href="como_se_hizo.pdf">Cómo se hizo</a>
         <p>Posted by:</p> <a href="mailto:wfc@correo.com">Luis Balderas Ruiz</a>
    </footer>
 
