--- a/Practica 1/foro.html
+++ b/Practica 1/foro.html
@@ -17,12 +17,12 @@
         <section class="logo">
           <a href="index2.html" class="logo">
             <figure>
-              <img src="imagenes/logo-web.png" alt="logo" width="300" height="100"/>
+              <img src="./imagenes/logo-web.png" alt="logo" width="300" height="100">
             </figure>
           </a>
         </section>
         <section class="title">
-          <a class="titulo" href="#home"><h1>WFC Wellness Fitness Center</h1></a>
+          <a class="titulo" href="index2.html"><h1>WFC Wellness Fitness Center</h1></a>
         </section>
         <section class="logeado">
             Correcto. ¡Bienvenido, guerrer@!
@@ -88,7 +88,7 @@
     </section>
 
     <footer>
-         <a href="../como_se_hizo.pdf">Cómo se hizo</a>
+         <a href="como_se_hizo.pdf">Cómo se hizo</a>
          <p>Posted by:</p> <a href="mailto:wfc@correo.com">Luis Balderas Ruiz</a>
     </footer>
 
