--- a/Practica 1/horario.html
+++ b/Practica 1/horario.html
@@ -15,7 +15,7 @@
         <section class="logo">
           <a href="index2.html" class="logo">
             <figure>
-              <img src="imagenes/logo-web.png" alt="logo" width="300" height="100"/>
+              <img src="./imagenes/logo-web.png" alt="logo" width="300" height="100">
             </figure>
           </a>
         </section>
@@ -147,7 +147,7 @@
 
 
     <footer>
-         <a href="../como_se_hizo.pdf">Cómo se hizo</a>
+         <a href="como_se_hizo.pdf">Cómo se hizo</a>
     </footer>
 
   </body>
