--- a/Practica 2/formularioalta.html
+++ b/Practica 2/formularioalta.html
@@ -51,7 +51,8 @@
         <legend> Información personal: </legend>
           Nombre: <input type="text" name="nombre"> <br> <br>
           Apellidos: <input type="text" name="apellidos"> <br> <br>
-          DNI: <input type="text" name="dni"> <br> <br>
+          DNI (Será tu identificador en el login): <input type="text" name="dni"> <br> <br>
+          Contraseña: <input type="passwd" name="passwd"> <br> <br>
           Fecha de naciemiento: <input type="date" name="edad" value="yyyy-mm-dd"> <br> <br>
           Sexo: <br>
             <input type="radio" name="sexo" value="M"> Masculino <br>
@@ -105,6 +106,8 @@
             <input type="text" name="otros" placeholder="Si seleccionaste otros, cítalos"> <br>
       </fieldset>
 
+      <label for="imagen">Foto:</label> <br>
+      <input id="imagen" name="imagen" size="30" type="file"/>
       <br> <br>
         <input type="submit" id="enviar" value="Enviar"  onclick="alert('La información se registró correctamente')">
         <input type="reset" id="limpiar" value="Reset">
