--- a/Practica 2/formularioalta.html
+++ b/Practica 2/formularioalta.html
@@ -14,14 +14,14 @@
   <body>
     <header>
         <section class="logo">
-          <a href="index2.html" class="logo">
+          <a href="index.php" class="logo">
             <figure>
               <img src="./imagenes/logo-web.png" alt="logo">
             </figure>
           </a>
         </section>
         <section class="title">
-          <a class="titulo" href="#home"><h1>WFC Wellness Fitness Center</h1></a>
+          <a class="titulo" href="index.php"><h1>WFC Wellness Fitness Center</h1></a>
         </section>
         <section class="logeado">
             Correcto. ¡Bienvenido, guerrer@!
@@ -35,7 +35,7 @@
     </header>
 
     <nav class="topnav">
-        <a class="active" href="index2.html">Inicio</a>
+        <a class="active" href="index.php">Inicio</a>
         <a href="actividades.html">Actividades</a>
         <a href="horario.html">Horario</a>
         <a href="tecnicos.html">Técnicos</a>
@@ -52,7 +52,7 @@
           Nombre: <input type="text" name="nombre"> <br> <br>
           Apellidos: <input type="text" name="apellidos"> <br> <br>
           DNI (Será tu identificador en el login): <input type="text" name="dni"> <br> <br>
-          Contraseña: <input type="passwd" name="passwd"> <br> <br>
+          Contraseña: <input type="password" name="passwd"> <br> <br>
           Fecha de naciemiento: <input type="date" name="edad" value="yyyy-mm-dd"> <br> <br>
           Sexo: <br>
             <input type="radio" name="sexo" value="M"> Masculino <br>
