Alta de usuario, imagen por defecto y autenticación (a medias)

--- a/Practica 2/formularioalta.html
+++ b/Practica 2/formularioalta.html
@@ -107,7 +107,7 @@
       </fieldset>
 
       <label for="imagen">Foto:</label> <br>
-      <input id="imagen" name="imagen" size="30" type="file"/>
+      <input type="file" id="imagen" name="imagen" size="30"/>
       <br> <br>
         <input type="submit" id="enviar" value="Enviar"  onclick="alert('La información se registró correctamente')">
         <input type="reset" id="limpiar" value="Reset">
